crates/rtd/src/unit_tests/snapshots/rtd__upgrade_compatibility__upgrade_compatibility_tests__enum.snap
---
source: crates/rtd/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(err.to_string())
---
error[EUC01003]: ability mismatch
  ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:9:17
  │
9 │     public enum EnumAddAbility has copy, drop { // add drop
  │                 ^^^^^^^^^^^^^^ Unexpected ability: 'drop'
  │
  = Enums are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
  = Restore the original ability of the enum: 'copy' for enum 'EnumAddAbility'.

error[EUC01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:13:17
   │
13 │     public enum EnumRemoveAbility has copy { // drop removed
   │                 ^^^^^^^^^^^^^^^^^ Missing ability: 'drop'
   │
   = Enums are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of the enum: 'copy' and 'drop' for enum 'EnumRemoveAbility'.

error[EUC01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:17:17
   │
17 │     public enum EnumAddAndRemoveAbility has copy, store { // change drop to store
   │                 ^^^^^^^^^^^^^^^^^^^^^^^ Mismatched abilities: missing 'drop', unexpected 'store'
   │
   = Enums are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of the enum: 'copy' and 'drop' for enum 'EnumAddAndRemoveAbility'.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:23:9
   │
21 │     public enum EnumAddVariant {
   │                 -------------- Enum definition
22 │         A,
23 │         B, // added
   │         ^ New unexpected variant 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variant for enum 'EnumAddVariant' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:26:17
   │
26 │     public enum EnumRemoveVariant {
   │                 ^^^^^^^^^^^^^^^^^ Missing variant 'B'.
   │
   = Enums are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original enum's variant 'B' for enum 'EnumRemoveVariant' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:33:9
   │
31 │     public enum EnumChangeVariant {
   │                 ----------------- Enum definition
32 │         A,
33 │         C, // changed from B
   │         ^ Mismatched variant 'C', expected 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeVariant' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:38:9
   │
36 │     public enum EnumChangeAndAddVariant {
   │                 ----------------------- Enum definition
37 │         A,
38 │         C, // to be changed to C
   │         ^ Mismatched variant 'C', expected 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndAddVariant' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:38:9
   │
36 │     public enum EnumChangeAndAddVariant {
   │                 ----------------------- Enum definition
37 │         A,
38 │         C, // to be changed to C
   │         ^ New unexpected variant 'C'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndAddVariant' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:39:9
   │
36 │     public enum EnumChangeAndAddVariant {
   │                 ----------------------- Enum definition
   ·
39 │         D // added
   │         ^ New unexpected variant 'D'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndAddVariant' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:42:17
   │
42 │     public enum EnumChangeAndRemoveVariant {
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing variant 'C'.
   │
   = Enums are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original enum's variant 'C' for enum 'EnumChangeAndRemoveVariant' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:44:9
   │
42 │     public enum EnumChangeAndRemoveVariant {
   │                 -------------------------- Enum definition
43 │         A,
44 │         C, // changed to C
   │         ^ Mismatched variant 'C', expected 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndRemoveVariant' including the ordering.

error[EUC01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:49:17
   │
49 │     public enum EnumAddAbilityWithTypes has copy, drop { // drop added
   │                 ^^^^^^^^^^^^^^^^^^^^^^^ Unexpected ability: 'drop'
   │
   = Enums are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original ability of the enum: 'copy' for enum 'EnumAddAbilityWithTypes'.

error[EUC01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:53:17
   │
53 │     public enum EnumRemoveAbilityWithTypes has copy { // drop removed
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing ability: 'drop'
   │
   = Enums are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of the enum: 'copy' and 'drop' for enum 'EnumRemoveAbilityWithTypes'.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:59:9
   │
57 │     public enum EnumAddVariantWithTypes {
   │                 ----------------------- Enum definition
58 │         A { a: u8 },
59 │         B { b: u8 }, // added
   │         ^^^^^^^^^^^ New unexpected variant 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variant for enum 'EnumAddVariantWithTypes' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:62:17
   │
62 │     public enum EnumRemoveVariantWithTypes {
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing variant 'B'.
   │
   = Enums are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original enum's variant 'B' for enum 'EnumRemoveVariantWithTypes' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:69:9
   │
67 │     public enum EnumChangeVariantWithTypes {
   │                 -------------------------- Enum definition
68 │         A { a: u8 },
69 │         C { b: u8 }, // changed to C
   │         ^^^^^^^^^^^ Mismatched variant 'C', expected 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeVariantWithTypes' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:74:9
   │
72 │     public enum EnumChangeAndAddVariantWithTypes {
   │                 -------------------------------- Enum definition
73 │         A { a: u8 },
74 │         C { b: u8 }, // to be changed to C
   │         ^^^^^^^^^^^ Mismatched variant 'C', expected 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndAddVariantWithTypes' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:74:9
   │
72 │     public enum EnumChangeAndAddVariantWithTypes {
   │                 -------------------------------- Enum definition
73 │         A { a: u8 },
74 │         C { b: u8 }, // to be changed to C
   │         ^^^^^^^^^^^ New unexpected variant 'C'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndAddVariantWithTypes' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:75:9
   │
72 │     public enum EnumChangeAndAddVariantWithTypes {
   │                 -------------------------------- Enum definition
   ·
75 │         D { d: u8 }, // added
   │         ^^^^^^^^^^^ New unexpected variant 'D'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndAddVariantWithTypes' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:78:17
   │
78 │     public enum EnumChangeAndRemoveVariantWithPositionalTypes {
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing variant 'C'.
   │
   = Enums are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original enum's variant 'C' for enum 'EnumChangeAndRemoveVariantWithPositionalTypes' including the ordering.

error[EUC02001]: variant mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:80:9
   │
78 │     public enum EnumChangeAndRemoveVariantWithPositionalTypes {
   │                 --------------------------------------------- Enum definition
79 │         A(u8),
80 │         C(u8), // changed to C
   │         ^^^^^ Mismatched variant 'C', expected 'B'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangeAndRemoveVariantWithPositionalTypes' including the ordering.

error[EUC01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:85:9
   │
84 │     public enum EnumChangePositionalType {
   │                 ------------------------ Enum definition
85 │         A(u8), // add u8
   │         ^^^^^ Mismatched variant field count, expected 0, found 1.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangePositionalType' including the ordering.

error[EUC01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:86:9
   │
84 │     public enum EnumChangePositionalType {
   │                 ------------------------ Enum definition
85 │         A(u8), // add u8
86 │         B(u16), // changed to u16
   │         ^^^^^^ Mismatched field type 'u16', expected 'u8'.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangePositionalType' including the ordering.

error[EUC01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:87:9
   │
84 │     public enum EnumChangePositionalType {
   │                 ------------------------ Enum definition
   ·
87 │         C(u8), // removed u8
   │         ^^^^^ Mismatched variant field count, expected 2, found 1.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangePositionalType' including the ordering.

error[EUC01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:88:9
   │
84 │     public enum EnumChangePositionalType {
   │                 ------------------------ Enum definition
   ·
88 │         D, // removed u8 from variant
   │         ^ Mismatched variant field count, expected 1, found 0.
   │
   = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original enum's variants for enum 'EnumChangePositionalType' including the ordering.

error[EUC01002]: type mismatch
    ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:100:9
    │
 99 │     public enum EnumWithPositionalChanged {
    │                 ------------------------- Enum definition
100 │         A(ChangeFieldB), // changed to ChangeFieldB
    │         ^^^^^^^^^^^^^^^ Mismatched field type '0x0::upgrades::ChangeFieldB', expected '0x0::upgrades::ChangeFieldA'.
    │
    = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
    = Restore the original enum's variant for enum 'EnumWithPositionalChanged' including the ordering.

error[EUC01002]: type mismatch
    ┌─ /fixtures/upgrade_errors/enum_errors_v2/sources/UpgradeErrors.move:104:9
    │  
103 │       public enum EnumWithNamedChanged {
    │                   -------------------- Enum definition
104 │ ╭         A {
105 │ │             x: ChangeFieldA,
106 │ │             y: ChangeFieldA,
107 │ │             z: ChangeFieldB, // changed to ChangeFieldB
108 │ │         },
    │ ╰─────────^ Mismatched field type '0x0::upgrades::ChangeFieldB', expected '0x0::upgrades::ChangeFieldA'.
    │  
    = Enums are part of a module's public interface and cannot be removed or changed during an upgrade.
    = Restore the original enum's variant for enum 'EnumWithNamedChanged' including the ordering.


Upgrade failed, this package requires changes to be compatible with the existing package. Its upgrade policy is set to 'compatible'. Use --skip-verify-compatibility to bypass this check locally.
